@@ -270,3 +270,5 @@ Version 1.8.0
 - Removed newRubyRange
 
 + Expended RubyDate API
+
++ Added RubyEnumerable::of, RubyEnumerable::copyOf, RubyEnumerator::of, RubyEnumerator::copyOf, RubyLazyEnumerator::of & RubyLazyEnumerator::copyOf
